// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icons/general/IconSecurityClassification should correctly render icon with all props specified 1`] = `
<AccessibleSVG
  className="bdl-IconSecurityClassificationSolid test"
  height={100}
  title="title"
  viewBox="0 0 10 13"
  width={200}
>
  <g
    fill="none"
    fillRule="evenodd"
    stroke="#222"
  >
    <path
      d="M9.5 6.545a6.413 6.413 0 0 1-1.244 3.765c-.782 1.068-1.88 1.863-3.135 2.176a5.458 5.458 0 0 1-3.377-2.176A6.413 6.413 0 0 1 .5 6.545V3.496L5 1.451l4.5 2.045v3.05z"
      fill="#d3d3d3"
    />
    <path
      d="M7.5 5v4-4z"
      strokeLinecap="round"
      strokeLinejoin="round"
    />
  </g>
</AccessibleSVG>
`;

exports[`icons/general/IconSecurityClassification should correctly render icon with default values 1`] = `
<AccessibleSVG
  className="bdl-IconSecurityClassificationSolid"
  height={13}
  viewBox="0 0 10 13"
  width={13}
>
  <g
    fill="none"
    fillRule="evenodd"
    stroke="#222"
  >
    <path
      d="M9.5 6.545a6.413 6.413 0 0 1-1.244 3.765c-.782 1.068-1.88 1.863-3.135 2.176a5.458 5.458 0 0 1-3.377-2.176A6.413 6.413 0 0 1 .5 6.545V3.496L5 1.451l4.5 2.045v3.05z"
      fill="#d3d3d3"
    />
    <path
      d="M7.5 5v4-4z"
      strokeLinecap="round"
      strokeLinejoin="round"
    />
  </g>
</AccessibleSVG>
`;
